# job_search_app

./: .gitignore  README.md  job_search_app.code-workspace  pyproject.toml  requirements.txt  setup.py  test_system.py
config/: __init__.py  company_sources.py  config.py
data/: jobsearch_local.db  jobsearch_test.db
job_search_app/: __init__.py
job_search_workspace/: CHANGELOG.md  DOCUMENTATION.md  LICENSE  README.md  SETUP_PROMPT.md  job_application_integration_plan.md
job_search_workspace/applications/: cover_letter_insights.md  cover_letter_templates.md  cover_letter_templates_v2.md  globalfoundries_3d_integration_intern_2026.md  samsung_2026_summer_internship.md  snippet_bank.md
job_search_workspace/companies/: globalfoundries_job_search.md  intel_return_strategy.md
job_search_workspace/profiles/: zesun_device_engineering_profile.md  zesun_ml_engineering_profile.md  zesun_neuromorphic_computing_profile.md  zesun_publications_achievements.md  zesun_skills_profile.md
job_search_workspace/resources/: job_search_resources.md
job_search_workspace/strategies/: job_matching_matrix.md  job_search_action_plan.md
job_search_workspace/tracking/: application_tracker.md  job_search_automation_workflow.md
logs/: system_test_report.txt  system_test_results.json
src/api_clients/: base_client.py  indeed_client.py
src/database/: __init__.py  models.py
src/notifications/: notifier.py
src/ranking/: job_ranker.py
src/scrapers/: ats_scrapers.py  base_scraper.py  github_scraper.py  intern_list_scraper.py
src/web_app/: app.py
tests/: test_web_routes.py
(+25 files in other folders)
