[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job_search_app"
version = "0.1.0"
description = "Comprehensive job search aggregator and web interface"
readme = "README.md"
requires-python = ">=3.9"

# Runtime dependencies are already pinned in requirements.txt; keep project meta minimal

[tool.setuptools.packages.find]
where = ["src", "config"]
include = ["*"] 